force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/sked_Travel_Time_Index_Refresh_Request__c.object-meta.xml
<CustomObject>
    <label>Travel Time Index Refresh Request</label>
    <nameField>
        <displayFormat>TTIRR-{000000}</displayFormat>
        <label>Travel Time Index Refresh Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Time Index Refresh Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>