force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/fields/sked_Last_Stuck_Detection_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_Last_Stuck_Detection_Time__c</fullName>
    <description>This field is created as part of HRP-14097</description>
    <label>Last Stuck Detection Time</label>
    <type>DateTime</type>
</CustomField>