force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/fields/sked_Manual_Refresh_SCO_Id__c.field-meta.xml
<CustomField>
    <fullName>sked_Manual_Refresh_SCO_Id__c</fullName>
    <label>Manual Refresh SCO Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>