force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/fields/sked_Origins__c.field-meta.xml
<CustomField>
    <fullName>sked_Origins__c</fullName>
    <label>Origins</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>