force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/fields/sked_Priority__c.field-meta.xml
<CustomField>
    <fullName>sked_Priority__c</fullName>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>