force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/fields/sked_Stuck_Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>sked_Stuck_Retry_Count__c</fullName>
    <description>This field is created as part of HRP-14097</description>
    <label>Stuck Retry Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>