force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/fields/sked_Time_Slots__c.field-meta.xml
<CustomField>
    <fullName>sked_Time_Slots__c</fullName>
    <label>Time Slots</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>