force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/fields/sked_Travel_Time_Index_Refresh_Group__c.field-meta.xml
<CustomField>
    <fullName>sked_Travel_Time_Index_Refresh_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Travel Time Index Refresh Group</label>
    <referenceTo>sked_Travel_Time_Index_Refresh_Group__c</referenceTo>
    <relationshipLabel>Travel Time Index Refresh Requests</relationshipLabel>
    <relationshipName>Travel_Time_Index_Refresh_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>