force-app/main/default/objects/sked_Travel_Time_Index_Refresh_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>sked_Status__c</columns>
    <columns>sked_Priority__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>